# Oil-and-Gas-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: architecture-diagram.mermaid  circular-dependencies.md  dead-code-candidates.md  dependency-graph.json  high-risk-modules.md  refactoring-priorities.md
app/: main.py
app/api/routes/: __init__.py  audit.py  explainability.py  feedback.py  health.py  ingestion.py  normalization.py  output.py  scoring.py
app/core/: config.py
app/modules/audit/: interfaces.py
app/modules/explainability/: interfaces.py
app/modules/feedback/: interfaces.py
app/modules/ingestion/: interfaces.py
app/modules/normalization/: interfaces.py
app/modules/output/: interfaces.py
app/modules/scoring/: interfaces.py
app/oil_and_gas_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: settings.example.toml
docs/: architecture.md  fusion.md  ingestion.md  output_apis.md  qa-assurance.md  qa_assurance.md  scoring.md
src/mlpe/: app.py  models.py
src/mlpe/api/: router.py
src/mlpe/audit/: assurance.py
src/mlpe/explainability/: rationale.py
src/mlpe/feedback/: manager.py
src/mlpe/ingestion/: pipeline.py
src/mlpe/normalization/: fusion.py
src/mlpe/scoring/: engine.py
tests/: test_app.py
