[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oil-and-gas-platform"
version = "0.1.0"
description = "Baseline FastAPI service for the Oil and Gas data platform"
authors = [{name = "OG Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "app"}
[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
